@@ -13,7 +13,7 @@
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 
-   You should have received a copy of the GNU General Public License 
+   You should have received a copy of the GNU General Public License
    along with this library; see the file COPYING. If not, write to the
    Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
    MA 02110-1301, USA.
@@ -82,7 +82,7 @@ union float_long
 
 float __ulong2fs (unsigned long a )
 {
-  unsigned char exp = 24 + EXCESS;
+  unsigned char exp = (unsigned char)24 + (unsigned char)EXCESS;
   volatile union float_long fl;
 
   if (!a)
@@ -96,7 +96,7 @@ float __ulong2fs (unsigned long a )
       exp--;
     }
 
-  while (a & NORM) 
+  while (a & NORM)
     {
       // we lose accuracy here
       if (a & 1)
@@ -104,7 +104,7 @@ float __ulong2fs (unsigned long a )
       a >>= 1;
       exp++;
     }
-  
+
   a &= ~HIDDEN ;
   /* pack up and go home */
   fl.l = PACK(0,(unsigned long)exp, a);
